Shared memory working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,11 @@
     "files.associations": {
         "types.h": "c",
         "wordsize.h": "c",
-        "timesize.h": "c"
+        "timesize.h": "c",
+        "stack.h": "c",
+        "array": "c",
+        "string_view": "c",
+        "initializer_list": "c",
+        "limits.h": "c"
     }
 }
