--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.25.1)
 project(myncdu)
 
-set
+set(C_STANDARD 11)
 
-add_executable(myncdu myncdu.c)
+file (GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/*.c")
+
+include_directories("header")
+
+add_executable(myncdu ${SOURCES})
