--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "array": "c",
         "string_view": "c",
         "initializer_list": "c",
-        "limits.h": "c"
+        "limits.h": "c",
+        "darray.h": "c"
     }
 }
